add suggestions to search; add some icons

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -607,6 +607,11 @@ p {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.dark p {
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
 img {
   pointer-events: none;
   max-height: 24rem;
@@ -1046,6 +1051,10 @@ table th {
   position: relative;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1054,6 +1063,11 @@ table th {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .mr-2 {
@@ -1108,6 +1122,10 @@ table th {
   height: 1.5rem;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -1118,6 +1136,10 @@ table th {
 
 .w-full {
   width: 100%;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .min-w-0 {
@@ -1152,8 +1174,20 @@ table th {
   flex-direction: column;
 }
 
+.place-content-center {
+  place-content: center;
+}
+
+.place-items-center {
+  place-items: center;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -1193,6 +1227,12 @@ table th {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -1272,6 +1312,10 @@ table th {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .align-middle {
