--- a/styles/app.css
+++ b/styles/app.css
@@ -30,7 +30,7 @@
   }
 
   .primary-input {
-    @apply shadow-sm focus:ring-indigo-500 dark:focus:ring-indigo-400 focus:border-indigo-900 dark:focus:border-indigo-400 w-full rounded-lg h-14 mt-2 sm:mt-0 dark:box-dark dark:text-s-dark dark:placeholder:text-s-dark;
+    @apply shadow-sm focus:ring-indigo-500 dark:focus:ring-indigo-400 focus:border-indigo-900 dark:focus:border-indigo-400 w-full rounded-lg h-14 mt-2 sm:mt-0 dark:box-dark dark:text-s-dark dark:placeholder:text-l-dark;
   }
 
   .breadcrumbs-link {
