--- a/styles/app.css
+++ b/styles/app.css
@@ -16,21 +16,25 @@
   }
 
   h2 {
-    @apply text-2xl font-bold leading-7 text-gray-900 dark:text-s-dark sm:text-3xl sm:leading-9 sm:truncate mb-4;
+    @apply text-2xl font-bold leading-7 text-indigo-900 dark:text-s-dark sm:text-3xl sm:leading-9 sm:truncate mb-4;
   }
 
   table th {
     @apply px-6 py-3 text-left text-xs font-bold text-white dark:text-s-dark uppercase tracking-wider;
   }
+
+  label {
+    @apply text-indigo-900 dark:text-s-dark text-xs;
+  }
 }
 
 @layer components {
   .primary-btn {
-    @apply sm:ml-4 mt-2 sm:mt-0 inline-flex items-center px-3.5 py-3.5 bg-indigo-900 text-white dark:bg-btn-dark dark:text-s-dark rounded-lg shadow-sm hover:bg-indigo-600 dark:hover:bg-btn-l-dark focus:outline-none focus:ring-indigo-500 focus:border-indigo-900 dark:focus:border-btn-dark h-14 sm:w-1/6 justify-center font-semibold sm:text-xl;
+    @apply sm:ml-4 mt-2 sm:mt-0 inline-flex items-center px-3.5 py-3.5 bg-indigo-900 text-white dark:bg-btn-dark dark:text-s-dark rounded-lg hover:bg-indigo-600 dark:hover:bg-indigo-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-900 dark:focus:border-btn-dark h-14 sm:w-1/6 justify-center font-semibold sm:text-xl shadow-lg shadow-indigo-900/50;
   }
 
   .primary-input {
-    @apply shadow-sm focus:ring-indigo-500 dark:focus:ring-indigo-400 focus:border-indigo-900 dark:focus:border-indigo-400 w-full rounded-lg h-14 mt-2 sm:mt-0 dark:box-dark dark:text-s-dark dark:placeholder:text-l-dark;
+    @apply shadow-sm focus:ring-indigo-500 dark:focus:ring-indigo-400 focus:border-indigo-900 dark:focus:border-indigo-400 w-full rounded-lg h-14 mt-2 sm:mt-0 dark:box-dark dark:text-s-dark dark:placeholder:text-l-dark caret-indigo-900 dark:caret-indigo-200;
   }
 
   .breadcrumbs-link {
@@ -63,6 +67,22 @@
 
   .value-td {
     @apply px-6 py-4 whitespace-nowrap text-sm text-indigo-500 dark:text-indigo-400;
+  }
+
+  .button-side-l-group {
+    @apply py-2 px-4 text-sm font-medium text-gray-900 bg-white rounded-l-lg border border-gray-200 hover:bg-indigo-50 focus:z-10 focus:ring-2 focus:ring-indigo-700 dark:focus:ring-indigo-400 dark:box-dark dark:border-gray-600 dark:text-s-dark dark:hover:bg-gray-600 dark:focus:text-s-dark;
+  }
+
+  .button-side-r-group {
+    @apply py-2 px-4 text-sm font-medium text-gray-900 bg-white rounded-r-md border border-gray-200 hover:bg-indigo-50 focus:z-10 focus:ring-2 focus:ring-indigo-700 dark:focus:ring-indigo-400 dark:box-dark dark:border-gray-600 dark:text-s-dark dark:hover:bg-gray-600 dark:focus:text-s-dark;
+  }
+
+  .button-center-group {
+    @apply py-2 px-4 text-sm font-medium text-gray-900 bg-white border-t border-b border-gray-200 hover:bg-indigo-50 focus:z-10 focus:ring-2 focus:ring-indigo-700 dark:focus:ring-indigo-400 dark:box-dark dark:border-gray-600 dark:text-s-dark dark:hover:bg-gray-600 dark:focus:text-s-dark;
+  }
+
+  .button-group-active {
+    @apply bg-indigo-50 dark:bg-gray-600;
   }
 }
 
