--- a/styles/app.css
+++ b/styles/app.css
@@ -19,6 +19,10 @@
     @apply text-2xl font-bold leading-7 text-indigo-900 dark:text-s-dark sm:text-3xl sm:leading-9 sm:truncate mb-4;
   }
 
+  h3 {
+    @apply text-xl font-bold leading-7 text-indigo-900 dark:text-s-dark sm:text-2xl sm:leading-9 sm:truncate mb-4;
+  }
+
   table th {
     @apply px-6 py-3 text-left text-xs font-bold text-white dark:text-s-dark uppercase tracking-wider;
   }
@@ -84,6 +88,14 @@
   .button-group-active {
     @apply bg-indigo-50 dark:bg-gray-600;
   }
+
+  .evolution-card {
+    @apply w-full sm:w-1/3 grid grid-flow-col place-items-center gap-x-10 overflow-hidden bg-white rounded-lg shadow-md dark:box-dark;
+  }
+
+  .evolution-img-card {
+    @apply w-48 h-48 flex items-center justify-center rounded-full shadow-lg shadow-indigo-400 dark:shadow-gitGreyDark bg-indigo-400 clip-path-mid-circle;
+  }
 }
 
 @layer utilities {
@@ -137,5 +149,9 @@
 
   .border-btn-dark {
     border-color: #768390;
+  }
+
+  .clip-path-mid-circle {
+    margin: -38px;
   }
 }
