--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1254,12 +1254,10 @@ label {
 }
 
 .evolution-card {
-  display: grid;
+  display: flex;
   width: 100%;
-  grid-auto-flow: column;
-  place-items: center;
-  -moz-column-gap: 2.5rem;
-       column-gap: 2.5rem;
+  flex-direction: row;
+  align-items: center;
   overflow: hidden;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
@@ -1273,7 +1271,7 @@ label {
   background-color: #2d333b;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .evolution-card {
     width: 33.333333%;
   }
@@ -1281,13 +1279,15 @@ label {
 
 .evolution-img-card {
   display: flex;
-  height: 12rem;
-  width: 12rem;
+  height: 10rem;
+  width: 10rem;
+  flex-basis: 50%;
   align-items: center;
   justify-content: center;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
+  padding-left: 1.5rem;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1299,6 +1299,13 @@ label {
 .dark .evolution-img-card {
   --tw-shadow-color: #22272e;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+@media (min-width: 1024px) {
+  .evolution-img-card {
+    height: 12rem;
+    width: 12rem;
+  }
 }
 
 .visible {
@@ -1379,6 +1386,10 @@ label {
   height: 1.5rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -1393,6 +1404,10 @@ label {
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .min-w-0 {
@@ -1411,21 +1426,12 @@ label {
   flex: 1 1 0%;
 }
 
-@-webkit-keyframes pulse {
-  50% {
-    opacity: .5;
-  }
+.basis-1\/2 {
+  flex-basis: 50%;
 }
 
-@keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
-.animate-pulse {
-  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+.basis-1\/4 {
+  flex-basis: 25%;
 }
 
 .touch-auto {
@@ -1607,11 +1613,6 @@ label {
   line-height: 1.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .font-medium {
   font-weight: 500;
 }
@@ -1744,11 +1745,6 @@ label {
 }
 
 @media (min-width: 640px) {
-  .sm\:-mx-6 {
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
-  }
-
   .sm\:flex {
     display: flex;
   }
@@ -1765,28 +1761,15 @@ label {
     -moz-column-gap: 1.5rem;
          column-gap: 1.5rem;
   }
-
-  .sm\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2rem * var(--tw-space-x-reverse));
-    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
 }
 
 @media (min-width: 768px) {
   .md\:flex {
     display: flex;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:items-center {
@@ -1796,21 +1779,36 @@ label {
   .md\:justify-between {
     justify-content: space-between;
   }
+
+  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:-mx-6 {
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
+  .lg\:h-24 {
+    height: 6rem;
+  }
+
+  .lg\:w-24 {
+    width: 6rem;
   }
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
