--- a/styles/app.css
+++ b/styles/app.css
@@ -90,11 +90,11 @@
   }
 
   .evolution-card {
-    @apply w-full sm:w-1/3 grid grid-flow-col place-items-center gap-x-10 overflow-hidden bg-white rounded-lg shadow-md dark:box-dark;
+    @apply w-full md:w-1/3 flex flex-row items-center overflow-hidden bg-white rounded-lg shadow-md dark:box-dark;
   }
 
   .evolution-img-card {
-    @apply w-48 h-48 flex items-center justify-center rounded-full shadow-lg shadow-indigo-400 dark:shadow-gitGreyDark bg-indigo-400 clip-path-mid-circle;
+    @apply w-40 h-40 lg:w-48 lg:h-48 pl-6 flex basis-1/2 items-center justify-center rounded-full shadow-lg shadow-indigo-400 dark:shadow-gitGreyDark bg-indigo-400 clip-path-mid-circle;
   }
 }
 
