--- a/styles/app.css
+++ b/styles/app.css
@@ -34,7 +34,7 @@
 
 @layer components {
   .primary-btn {
-    @apply sm:ml-4 mt-2 sm:mt-0 inline-flex items-center px-3.5 py-3.5 bg-indigo-900 text-white dark:bg-btn-dark dark:text-s-dark rounded-lg hover:bg-indigo-600 dark:hover:bg-indigo-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-900 dark:focus:border-btn-dark h-14 sm:w-1/6 justify-center font-semibold sm:text-xl shadow-lg shadow-indigo-900/50;
+    @apply sm:ml-4 mt-2 sm:mt-0 inline-flex items-center px-3.5 py-3.5 bg-indigo-600 text-white dark:bg-btn-dark dark:text-s-dark rounded-lg hover:bg-indigo-400 dark:hover:bg-indigo-400 focus:outline-none focus:ring-indigo-400 focus:border-indigo-600 dark:focus:border-btn-dark h-14 sm:w-1/6 justify-center font-semibold sm:text-xl shadow-lg shadow-indigo-600/50;
   }
 
   .primary-input {
@@ -90,7 +90,7 @@
   }
 
   .evolution-card {
-    @apply w-full md:w-1/3 flex flex-row items-center overflow-hidden bg-white rounded-lg shadow-md dark:box-dark;
+    @apply w-full flex flex-row items-center overflow-hidden bg-white rounded-lg shadow-md dark:box-dark;
   }
 
   .evolution-img-card {
@@ -132,7 +132,7 @@
   }
 
   .bg-btn-dark {
-    @apply bg-indigo-900;
+    @apply bg-indigo-600;
   }
 
   .bg-btn-l-dark {
